// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Card /> Renders the <Card /> and clicks the card feature 1`] = `
<div
  class="card__Group-sc-17gu7hr-2 jDQCQI"
>
  <div
    class="card__Container-sc-17gu7hr-1 tFHzL"
  >
    <p
      class="card__Title-sc-17gu7hr-0 gOzYkP"
    >
      Documentaries
    </p>
    <div
      class="card__Entities-sc-17gu7hr-5 XmzIk"
    >
      <div
        class="card__Item-sc-17gu7hr-8 bdZSEj"
        data-testid="tiger-king-item-feature"
      >
        <img
          class="card__Image-sc-17gu7hr-7 gKfrHE"
          src="/images/series/documentaries/tiger-king/small.jpg"
        />
        <div
          class="card__Meta-sc-17gu7hr-6 hUPbVM"
        >
          <p
            class="card__SubTitle-sc-17gu7hr-3 dxnqzj"
          >
            Tiger King
          </p>
          <p
            class="card__Text-sc-17gu7hr-4 ddmioa"
          >
            Tiger King description
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="card__Container-sc-17gu7hr-1 tFHzL"
  >
    <p
      class="card__Title-sc-17gu7hr-0 gOzYkP"
    >
      Feel Good
    </p>
    <div
      class="card__Entities-sc-17gu7hr-5 XmzIk"
    >
      <div
        class="card__Item-sc-17gu7hr-8 bdZSEj"
        data-testid="juno-item-feature"
      >
        <img
          class="card__Image-sc-17gu7hr-7 gKfrHE"
          src="/images/series/feel-good/juno/small.jpg"
        />
        <div
          class="card__Meta-sc-17gu7hr-6 hUPbVM"
        >
          <p
            class="card__SubTitle-sc-17gu7hr-3 dxnqzj"
          >
            Juno
          </p>
          <p
            class="card__Text-sc-17gu7hr-4 ddmioa"
          >
            Juno description
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Card /> Renders the <Card /> with populated data 1`] = `
<div
  class="card__Group-sc-17gu7hr-2 jDQCQI"
>
  <div
    class="card__Container-sc-17gu7hr-1 tFHzL"
  >
    <p
      class="card__Title-sc-17gu7hr-0 gOzYkP"
    >
      Documentaries
    </p>
    <div
      class="card__Entities-sc-17gu7hr-5 XmzIk"
    >
      <div
        class="card__Item-sc-17gu7hr-8 bdZSEj"
      >
        <img
          class="card__Image-sc-17gu7hr-7 gKfrHE"
          src="/images/series/documentaries/tiger-king/small.jpg"
        />
        <div
          class="card__Meta-sc-17gu7hr-6 hUPbVM"
        >
          <p
            class="card__SubTitle-sc-17gu7hr-3 dxnqzj"
          >
            Tiger King
          </p>
          <p
            class="card__Text-sc-17gu7hr-4 ddmioa"
          >
            Tiger King description
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="card__Container-sc-17gu7hr-1 tFHzL"
  >
    <p
      class="card__Title-sc-17gu7hr-0 gOzYkP"
    >
      Feel Good
    </p>
    <div
      class="card__Entities-sc-17gu7hr-5 XmzIk"
    >
      <div
        class="card__Item-sc-17gu7hr-8 bdZSEj"
      >
        <img
          class="card__Image-sc-17gu7hr-7 gKfrHE"
          src="/images/series/feel-good/juno/small.jpg"
        />
        <div
          class="card__Meta-sc-17gu7hr-6 hUPbVM"
        >
          <p
            class="card__SubTitle-sc-17gu7hr-3 dxnqzj"
          >
            Juno
          </p>
          <p
            class="card__Text-sc-17gu7hr-4 ddmioa"
          >
            Juno description
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
